--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,4 +1,5 @@
-<h1>Create new question</h1>
+<h1><%= form_title  %></h1>
+
 <%= form_for @question do |f|  %>
   <%= f.text_field :title, placeholder: "Title question"  %>
   <%= f.text_area :content, placeholder: "Your  question"  %>
