Add delete question functionality

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -3,11 +3,15 @@
   <tr>
     <td>Title</td>
     <td>Question</td>
+    <td></td>
+    <td></td>
   </tr>
   <tr>
     <% @questions.each do |question|  %>
       <td><%= link_to question.title, question  %></td>
       <td><%= question.content  %></td>
+      <td><%= link_to "Edit Question", edit_question_path(question)  %></td>
+      <td><%= link_to "Delete Question", question, method: :delete, data: {confirm: "Are you sure to delete this question?"}%></td>
   </tr>
     <% end %>
 </table>
