--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,2 +1,19 @@
 <h1><%= @question.title  %></h1>
 <p><%= @question.content  %></p>
+<%= link_to "Add Answer", new_question_answer_path(@question)  %>
+
+<h3>Answers For question</h3>
+<table>
+  <tr>
+    <th>Content</th>
+    <th></th>
+    <th></th> 
+  </tr>
+  <% @question.answers.each do |answer| %>
+  <tr>
+    <td><%= answer.content  %></td>
+    <td><%= link_to "Edit answer", edit_question_answer_path(@question,answer)  %></td>
+    <td><%= link_to "Delete answer", [@question,answer], method: :delete, data: {confirm: "Are you sure to delete question?"}  %></td>
+  </tr>
+  <% end %>   
+</table>
