--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -11,9 +11,13 @@
   </tr>
   <% @question.answers.each do |answer| %>
   <tr>
-    <td><%= answer.content  %></td>
+    <td><%= link_to answer.content, question_answer_path(answer)  %></td>
     <td><%= link_to "Edit answer", edit_question_answer_path(@question,answer)  %></td>
     <td><%= link_to "Delete answer", [@question,answer], method: :delete, data: {confirm: "Are you sure to delete question?"}  %></td>
   </tr>
   <% end %>   
 </table>
+
+<h2>Comments</h2>
+<%= render 'comments/comments'  %>
+<%= render 'comments/form'  %>
