--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -11,7 +11,7 @@
   </tr>
   <% @question.answers.each do |answer| %>
   <tr>
-    <td><%= link_to answer.content, question_answer_path(answer)  %></td>
+    <td><%= link_to answer.content, question_answer_path(@question,answer)  %></td>
     <td><%= link_to "Edit answer", edit_question_answer_path(@question,answer)  %></td>
     <td><%= link_to "Delete answer", [@question,answer], method: :delete, data: {confirm: "Are you sure to delete question?"}  %></td>
   </tr>
