Auth And restrict pages

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -10,14 +10,19 @@
     <% @questions.each do |question|  %>
       <td><%= link_to question.title, question  %></td>
       <td><%= question.content  %></td>
-      <td><%= link_to "Edit Question", edit_question_path(question)  %></td>
-      <td><%= link_to "Delete Question", question, method: :delete, data: {confirm: "Are you sure to delete this question?"}%></td>
+      <% if signed_in? %>
+        <td><%= link_to "Edit Question", edit_question_path(question)  %></td>
+        <td><%= link_to "Delete Question", question, method: :delete, data: {confirm: "Are you sure to delete this question?"}%></td>
+      <% end %>
   </tr>
     <% end %>
 </table>
 
-<%= link_to "Create question", new_question_path %>
-  
+<% if signed_in? %>
+  <div class="text-right">
+    <%= link_to "Create question", new_question_path %>
+  </div>
+<% end %>  
 
 
 
