--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <% if signed_in? %>
+      <div>Hola <%= current_user.name  %><%= link_to "Logout", logout_path, method: :delete  %></div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
