--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,53 @@
   </head>
 
   <body>
-    <% if signed_in? %>
-      <div>Hola <%= current_user.name  %><%= link_to "Logout", logout_path, method: :delete  %></div>
-    <% end %>
+    <nav class="navbar-default navbar-static-top">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-10 col-sm-offset-1">
+                <div class="navbar-header">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle Navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                  <%= link_to "FlowOverStack", root_path, class: "navbar-brand" %>    
+                </div>
+
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                  <ul class="nav navbar-nav">
+                    
+                  </ul>
+                  <ul class="nav navbar-nav navbar-right">
+                  <% if signed_in? %>
+                    <li><%= link_to "<span class='glyphicon glyphicon-plus'></span>".html_safe, new_question_path %></li>
+                    <li><%= link_to "Logout", logout_path, method: :delete %></li>
+                  <% else %>
+                    <li><%= link_to "Register", new_user_path %></li>
+                    <li><%= link_to "Login", login_path %></li>    
+                  <% end %>  
+                  <form class="navbar-form navbar-right" role="search">
+                    <%= form_tag(questions_path, :method => "get", id:"search-form") do  %>
+                      <%= text_field_tag :search, params[:search], placeholder: "Keyword", class: "form-control"  %>
+                      <%= submit_tag "Search", :name => nil, class: "btn btn-success" %>
+                    <% end %>
+                  </form>
+                </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </nav>
+        <div class="container">
+          <div class="row mt-3">
+            <div class="col-sm-8 col-sm-offset-2">
+            <% if flash[:notice] %>
+              <div class="alert alert-success"><%= flash[:notice] %></div>
+            <% end %>  
+            </div>
+          </div>
+        </div>
     <%= yield %>
   </body>
 </html>
