--- a/app/assets/stylesheets/answers.scss
+++ b/app/assets/stylesheets/answers.scss
@@ -1,3 +1,17 @@
-// Place all the styles related to the Answers controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.subsec-title{
+  color:#303030;
+  text-align:center;
+}
+
+.separator{
+width: 100%;
+height: 47px;
+border-bottom: 1px dotted gray;
+position: absolute;
+}
+
+.answer-content{
+  color:#303030;
+  font-size:23px;
+  text-align:center;
+}
