--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -1,3 +1,156 @@
-// Place all the styles related to the Questions controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.questions{
+  margin-top: 40px;
+  .question{
+    padding: 15px 10px;
+    border-radius: 6px;
+  &:hover{background:#f5f5f2;}
+
+    .question-details{
+      float:left;
+
+      .question-title a{
+        color:#303030;
+        font-size:21px;
+        line-height: 1;
+
+        &:hover, &:focus{
+          color:#28a745;text-decoration:none;};
+      }
+
+      .question-content{
+        display:block;
+        color:#999;
+        font-size:16px;
+      }
+
+      .question-date{
+        display:block;
+        color:#218838;
+        font-size:13px;
+      }
+    }
+  } 
+}
+
+
+.question-view{
+  .question-header{
+    background:#4a544b;
+    color:#fafaf2;
+    text-align: center;
+    padding: 80px 25px;
+    margin-top:10px;
+    margin-bottom:30px;
+
+    h1{
+      font-size:36px;
+      margin-top:0;
+    }
+
+    p {
+      font-size:18px;
+      color:#ddd;
+      margin-top:15px;
+      margin-bottom: 40px;
+    }
+
+    .btn-success{
+      font-size:18px;
+      font-weight: bold;
+    } 
+  }
+
+  .comments{
+    padding: 0 25px;
+    margin-bottom:40px;
+
+    h2 {
+      color:#218838;
+      font-size:22px;
+      margin-bottom: 20px;
+      text-align:center;
+    }
+  }
+
+}
+
+.actions {
+  margin-top: 30px;
+
+  a{ 
+    color:#ccc;
+    font-size:21px;
+    margin-right: 5px;
+
+    &:hover {color:white;}
+  }
+}
+
+
+.question-comments{
+  float:right;
+  color:#ccc;
+  padding:10px;
+
+  .glyphicon{font-size:21px;}
+  .comment-count{
+    margin-left:15px;
+    font-size:18px;
+    vertical-align:text-bottom;
+  }
+}
+.question-page {
+  .question-header {
+    background: #e2e2e2;
+    color: #303030;
+    text-align: center;
+    padding: 60px 25px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+
+    h1 {
+      font-size: 32px;
+      margin-top: 0;
+    }
+
+    p {
+      font-size: 18px;
+      color: #ddd;
+      margin-top: 15px;
+      margin-bottom: 40px;
+    }
+
+    .btn-primary {
+      font-size: 18px;
+      font-weight: bold;
+    }
+  }
+
+  .votes {
+    margin-bottom: 40px;
+    padding: 0 25px;
+
+    h2 {
+      color: #666;
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
+
+    img { width: 40px; }
+  }
+
+  .comments {
+    padding: 0 25px;
+
+    h2 {
+      color: #666;
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
+
+    img {
+      width: 25px;
+      margin: -3px 10px 0 -3px;
+    }
+  }
+}
