--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -1,10 +1,27 @@
-<% @question.answers.each do |answer|  %>
-  <li><%= answer.content  %></li>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+      <% @question.answers.each do |answer|  %>
+        <p class="answer-content"><%= answer.content  %></p>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-10 col-sm-offset-1">
+      <h3 class="subsec-title">Comments</h3>
+      <%= render 'comments/comments'  %>
+      <% if signed_in? %>
+      <%= render 'comments/form'  %>
+      <% end %>
+    </div>
+  </div>
+</div>
 
 
-<h3>Comments</h3>
-<%= render 'comments/comments'  %>
 <% if signed_in? %>
-<%= render 'comments/form'  %>
-<% end %>
+      <td><%= link_to "Edit answer", edit_question_answer_path(@question,answer)  %></td>
+      <td><%= link_to "Delete answer", [@question,answer], method: :delete, data: {confirm: "Are you sure to delete question?"}  %></td>
+    <% end %>
