--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,7 +1,18 @@
-<h1><%= form_title  %></h1>
-
-<%= form_for @question do |f|  %>
-  <%= f.text_field :title, placeholder: "Title question"  %>
-  <%= f.text_area :content, placeholder: "Your  question"  %>
-  <%= f.submit "Create question"  %>  
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
+      <h1><%= form_title  %></h1>
+      <%= form_for @question do |f| %>
+        <div class="form-group">
+          <%= f.text_field :title, class: "form-control input-lg", placeholder: "Title Question" %>
+        </div>
+        <div class="form-group">
+          <%= f.text_area :content, class: "form-control input-lg", placeholder: "Your Question" %>
+        </div>
+        <div>
+          <%= f.submit "Create Question", class: "btn btn-success btn-lg btn-block" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
