--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,3 +1,35 @@
+<div class="container">
+  <div class="row">
+    <div class="col-sm-10 col-sm-offset-1">
+      <div class="questions">
+        <% @questions.each do |question| %>
+        <div class="question clearfix">
+          <div class="question-details">
+            <span class="question-title"><%= link_to question.title, question %></span>
+            <span class="question-content"><%= question.content %></span>
+            <span class="question-date"><%= question.created_at.strftime("%B %d, %Y") %></span>
+          </div>
+        </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <h1>Questions</h1>
 <table>
   <tr>
