Associated user to products

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -19,7 +19,7 @@
             <h3 class="subsec-title"><%= @question.answers.count %> Answers</h3>
             <% @question.answers.each do |answer| %>
               <p><strong>Created: </strong><%= answer.created_at.strftime("%B %d, %Y")  %></p>
-              <span class="answer-content"><%= link_to answer.content, question_answer_path(@question,answer)  %></span>
+              <span><%= link_to answer.content, question_answer_path(@question,answer)  %></span>
             <% end %>
         </div>
       </div>
@@ -55,3 +55,4 @@
     </div>
   </div>
 </div>
+
