--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -57,6 +57,17 @@
     .btn-success{
       font-size:18px;
       font-weight: bold;
+    }
+    .actions {
+      margin-top: 30px;
+
+      a {
+        color: #ccc;
+        font-size: 21px;
+        margin-right: 5px;
+
+        &:hover { color: white; }
+      }
     } 
   }
 
