--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,6 +2,10 @@
   <header class="question-header">
     <h1><%= @question.title %></h1>
     <%= link_to "Add Answer", new_question_answer_path(@question), class: "btn btn-success btn-lg"   %>
+    <div class="actions">
+      <%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, edit_question_path(@product) %>
+      <%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, @question, method: :delete, data: { confirm: "¿Estás seguro de eliminar este producto?" } %>
+    </div>
   </header>
   <div class="container">
     <div class="row">
