--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,10 +2,12 @@
   <header class="question-header">
     <h1><%= @question.title %></h1>
     <%= link_to "Add Answer", new_question_answer_path(@question), class: "btn btn-success btn-lg"   %>
+    <% if signed_in? && @question.user == current_user %>
     <div class="actions">
       <%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, edit_question_path(@product) %>
-      <%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, @question, method: :delete, data: { confirm: "¿Estás seguro de eliminar este producto?" } %>
+      <%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, @question, method: :delete, data: { confirm: "Are you sure to delete this question?" } %>
     </div>
+    <% end %>
   </header>
   <div class="container">
     <div class="row">
