--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -58,17 +58,6 @@
       font-size:18px;
       font-weight: bold;
     }
-    .actions {
-      margin-top: 30px;
-
-      a {
-        color: #ccc;
-        font-size: 21px;
-        margin-right: 5px;
-
-        &:hover { color: white; }
-      }
-    } 
   }
 
   .comments{
@@ -89,11 +78,11 @@
   margin-top: 30px;
 
   a{ 
-    color:#ccc;
+    color:#303030;
     font-size:21px;
     margin-right: 5px;
 
-    &:hover {color:white;}
+    &:hover {color:#28a745;}
   }
 }
 
