--- a/app/views/answers/show.html.erb
+++ b/app/views/answers/show.html.erb
@@ -1,12 +1,18 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
-      <% @question.answers.each do |answer|  %>
-        <p class="answer-content"><%= answer.content  %></p>
-      <% end %>
+<div class="question-page">
+  <header class="question-header">
+    <h1><%= @question.title %></h1>
+  </header>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-10 col-sm-offset-1">
+        <% @question.answers.each do |answer| %>
+          <p><strong>Created: </strong><%= answer.created_at.strftime("%B %d, %Y")  %></p>
+          <p><%= answer.content %></p>
+        <% end %>
+      </div>
     </div>
   </div>
-</div>
+
 
 <div class="container">
   <div class="row">
@@ -21,7 +27,3 @@
 </div>
 
 
-<% if signed_in? %>
-      <td><%= link_to "Edit answer", edit_question_answer_path(@question,answer)  %></td>
-      <td><%= link_to "Delete answer", [@question,answer], method: :delete, data: {confirm: "Are you sure to delete question?"}  %></td>
-    <% end %>
