--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,7 +4,7 @@
     <%= link_to "Add Answer", new_question_answer_path(@question), class: "btn btn-success btn-lg"   %>
     <% if signed_in? && @question.user == current_user %>
     <div class="actions">
-      <%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, edit_question_path(@product) %>
+      <%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, edit_question_path(@question) %>
       <%= link_to "<span class='glyphicon glyphicon-trash'></span>".html_safe, @question, method: :delete, data: { confirm: "Are you sure to delete this question?" } %>
     </div>
     <% end %>
