--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,7 +1,9 @@
 <div class="question-page">
   <header class="question-header">
     <h1><%= @question.title %></h1>
+    <% if signed_in? %>
     <%= link_to "Add Answer", new_question_answer_path(@question), class: "btn btn-success btn-lg"   %>
+    <% end %>
     <% if signed_in? && @question.user == current_user %>
     <div class="actions">
       <%= link_to "<span class='glyphicon glyphicon-pencil'></span>".html_safe, edit_question_path(@question) %>
@@ -12,7 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-10 col-sm-offset-1">
-        <p><strong>Created: </strong><%= @question.created_at.strftime("%B %d, %Y")  %></p>
+        <p><strong>Created: </strong><%= @question.created_at.strftime("%B %d, %Y")%><strong> Author: </strong><%= @question.user.name  %></p>
         <p><%= @question.content %></p>
       </div>
     </div>
@@ -22,11 +24,13 @@
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1">
           <div class="separator"></div>
+          <div class="question clearfix">
             <h3 class="subsec-title"><%= @question.answers.count %> Answers</h3>
             <% @question.answers.each do |answer| %>
-              <p><strong>Created: </strong><%= answer.created_at.strftime("%B %d, %Y")  %></p>
-              <span><%= link_to answer.content, question_answer_path(@question,answer)  %></span>
+              <p><strong>Created: </strong><%= answer.created_at.strftime("%B %d, %Y")  %><strong> Author: </strong><%= answer.user.name  %></p>
+              <span><%= link_to answer.content.first(250), question_answer_path(@question,answer)  %></span>
             <% end %>
+          </div>  
         </div>
       </div>
     </div>
